[gd_scene load_steps=21 format=3 uid="uid://b0la24v561n4m"]

[ext_resource type="Texture2D" uid="uid://c4rkrr8nvin1p" path="res://2d_animation_frog_spritesheet.png" id="1_72oyu"]
[ext_resource type="Script" path="res://character.gd" id="1_jxwgo"]
[ext_resource type="AudioStream" uid="uid://beupp8uuxcccc" path="res://audio/phaseJump1.ogg" id="3_l0yk2"]
[ext_resource type="AudioStream" uid="uid://c30pnnxixrnlc" path="res://audio/phaserDown3.ogg" id="4_8lq6d"]
[ext_resource type="AudioStream" uid="uid://ccrrbqad5jr0k" path="res://crunch sound.mp3" id="5_ex5om"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u7wt7"]
atlas = ExtResource("1_72oyu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kklkp"]
atlas = ExtResource("1_72oyu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ompdb"]
atlas = ExtResource("1_72oyu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6gde"]
atlas = ExtResource("1_72oyu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yshh"]
atlas = ExtResource("1_72oyu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx275"]
atlas = ExtResource("1_72oyu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1q1w"]
atlas = ExtResource("1_72oyu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fsds"]
atlas = ExtResource("1_72oyu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wkbo"]
atlas = ExtResource("1_72oyu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tiec1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7wt7")
}],
"loop": true,
"name": &"in air",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kklkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kklkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ompdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6gde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7wt7")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yshh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx275")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1q1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fsds")
}],
"loop": false,
"name": &"land",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wkbo")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k35ox"]
size = Vector2(142, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6ila"]
size = Vector2(78, 76)

[sub_resource type="Animation" id="Animation_06qkp"]
resource_name = "eat_fly"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.1875, 2.35937), Vector2(2.783, 3), Vector2(2.188, 2.359)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eatSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_q8fcc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.1875, 2.35937)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yd5fg"]
_data = {
"RESET": SubResource("Animation_q8fcc"),
"eat_fly": SubResource("Animation_06qkp")
}

[node name="player" type="RigidBody2D"]
z_index = 1
position = Vector2(377, 767)
mass = 4.0
lock_rotation = true
script = ExtResource("1_jxwgo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(38, -42.5)
scale = Vector2(2.1875, 2.35937)
sprite_frames = SubResource("SpriteFrames_tiec1")
animation = &"walk"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(40, -41.5)
shape = SubResource("RectangleShape2D_k35ox")
metadata/_edit_group_ = true

[node name="jumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l0yk2")

[node name="landSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8lq6d")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(14, 50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, -77)
shape = SubResource("RectangleShape2D_s6ila")

[node name="eatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ex5om")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yd5fg")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
